prefer let to var, fix clipping

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   max-width: 100vw;
   max-height: 100vh;
+  overflow: hidden;
 }
 #current {
   position: absolute;
